# zephyr

boards/renesas/rcar_ironhide_x5h/: Kconfig.defconfig  Kconfig.rcar_spider_s4  board.cmake  rcar_ironhide_x5h_r8a78000_r52-pinctrl.dtsi  rcar_ironhide_x5h_r8a78000_r52.dts  rcar_ironhide_x5h_r8a78000_r52.yaml  rcar_ironhide_x5h_r8a78000_r52_defconfig  rcar_spider_s4_r8a779f0_r52-pinctrl.dtsi
boards/renesas/rcar_ironhide_x5h/doc/: index.rst
drivers/can/: CMakeLists.txt  Kconfig.rcar  can_rcar.c  can_rcar_rscanfd.c
drivers/clock_control/: clock_control_arm_scmi.c
drivers/firmware/scmi/: Kconfig  clk.c
drivers/mbox/: CMakeLists.txt  Kconfig
drivers/pinctrl/renesas/rcar/: pfc_rcar_x5h.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/excelitas/: CMakeLists.txt  Kconfig
drivers/sensor/excelitas/tpi1s1385/: CMakeLists.txt  Kconfig  tpi1s1385.c  tpi1s1385.h  tpi1s1385_priv.h  trigger_tpi1s1385.c
drivers/serial/: uart_rcar.c
drivers/usb/udc/: udc_stm32.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/can/: renesas,rcar-rscanfd.yaml
dts/bindings/pinctrl/: renesas,rcar-pfc-x5h.yaml
dts/bindings/sensor/: excelitas,tpi1s1385.yaml
include/zephyr/: kernel.h
include/zephyr/drivers/clock_control/: renesas_rcar_generic.h
include/zephyr/drivers/pinctrl/: pinctrl_rcar_x5h_common.h
include/zephyr/dt-bindings/clock/: r8a78000_cpg_mssr.h
include/zephyr/task_wdt/: task_wdt.h
samples/hello_world/: CMakeLists.txt  generate-factory-nvs.sh  nvs_factory_test.c  prj.conf
samples/hello_world/nvs_factory_tool/: .gitignore  Makefile  crc32_kconfig.c  crc8_kconfig.c  main.c  nvs_factory_tool.h  nvs_kconfig.c  nvs_stubs.c
samples/hello_world/src/: main.c
samples/subsys/canbus/isotp/: prj.conf
samples/subsys/nvs/factory/: CMakeLists.txt  README.rst  demo_flash_controller.overlay  demo_flash_controller_2.overlay  prj.conf  remove_default_flash_controller.overlay
samples/subsys/nvs/factory/include/: nvs_factory_tool.h
samples/subsys/nvs/factory/src/: demo_nvs_content.c  main.c
samples/sysbuild/hello_world/: CMakeLists.txt  custom-sections.ld  linker_factory_nvs.ld  nucleo_f091rc_flash.overlay  prj.conf  sysbuild.cmake
samples/sysbuild/hello_world/src/: main.c
samples/sysbuild/test_power_management/: CMakeLists.txt  README.md  nrf54h20dk_nrf54h20_cpuapp.overlay  prj.conf  sample.yaml
samples/sysbuild/test_power_management/remote/: CMakeLists.txt  nrf54h20dk_nrf54h20_cpurad.overlay  prj.conf
samples/sysbuild/test_power_management/src/: main.c  main_remote.c  watchdog.c  watchdog.h
soc/nordic/nrf54h/: power.c
soc/renesas/rcar/: soc.yml
soc/renesas/rcar/rcar_gen5/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc
soc/renesas/rcar/rcar_gen5/r52/: soc.h  (+1 more)
subsys/pm/: pm.c
subsys/task_wdt/: task_wdt.c
tests/drivers/mbox/mbox_data/: CMakeLists.txt
(+4 files in other folders)
